--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StepCounterApp</string>
+
+    <!-- button -->
+    <string name="view_records">기록보기</string>
 </resources>
