--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Button Labels -->
     <string name="view_records">기록보기</string>
     <string name="start_measurement">측정시작</string>
+    <string name="pause">일시중지</string>
     <string name="high_sensitivity">높음</string>
 
     <!-- UI Labels -->
