refactor: 알림 문자열 리소스 추가 및 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="sensitivity">Sensitivity</string>
     <string name="steps">STEPS</string>
     <string name="distance_unit">m</string>
+    <string name="notification_body">Measuring steps</string>
 </resources>
