style: 문자열 라벨링

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="steps">STEPS</string>
     <string name="distance_unit">m</string>
     <string name="notification_body">Measuring steps</string>
+    <string name="settings">Settings</string>
+    <string name="add_widget">Add Widget</string>
+    <string name="version">Version</string>
 </resources>
