feat: 버튼 컴포넌트 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="pause">PAUSE</string>
     <string name="high">High</string>
     <string name="low">Low</string>
+    <string name="rate_on_play_store">Rate on Play Store</string>">
 
     <!-- UI Labels -->
     <string name="calories_unit">kcal</string>
