feat: 걸음 수 알림 표시 기능 추가
- 걸음 수 알림 표시 기능 추가
- 앱 종료 시 service 종료 코드 삭제

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="calories_unit">kcal</string>
     <string name="sensor_delay">Sensor Delay</string>
     <string name="steps">STEPS</string>
+    <string name="steps_lower">Steps</string>
     <string name="distance_unit">m</string>
     <string name="notification_body">Measuring steps</string>
     <string name="settings">Settings</string>
